refator: token services to ensure user session is revoked from all devices
